DataBind CSV Write Support and Code Maintenance (#316)
* [DataBind] Added support to create CSV file

* [WDB] Fixed deprecated changes

* Updated .editorconfig

* [All] Code cleanup

* [All] Code cleanup

* [All] Code cleanup

* [DataBind] Added support to create CSV file

* [WDB] Fixed deprecated changes

* Updated .editorconfig

* [All] Code cleanup

* [All] Code cleanup

* [All] Revert changes

* [All] Fixed URI issue

* Updated Tests

* Fixed Deprecated Changes

---------

Co-authored-by: Ramesh Babu Prudhvi <rprudhvi@altimetrik.com>